add make directory, rename, remove and update panels actions